--- a/app/views/repositories/index.html.erb
+++ b/app/views/repositories/index.html.erb
@@ -12,9 +12,11 @@
   <tbody>
     <% @repositories.each do |repository| %>
       <tr>
+        <td>
+          <%= repository.url %>
+        </td>
         <td><%= link_to 'Show', repository %></td>
         <td><%= link_to 'Edit', edit_repository_path(repository) %></td>
-        <td><%= link_to 'Destroy', repository, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
